# kiwi8

./: .coverage  .dockerignore  .gitignore  .graphifyignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  b.sh  db.sh  deploy.sh  docker-compose.yml  env.sample  f.sh  krx_corp_list.xls  package-lock.json  package.json  pyproject.toml  ruff.toml  test_diary_api.py
.agent/skills/search-trcd/: SKILL.md
.antigravitycli/: 3daf9cb4-a875-422f-9c61-249971839a0b.json  c600cbbc-782f-4147-84b4-677fec02aad3.json
.claude/: settings.json  settings.local.json
.claude/agents/: pytest-generator.md  tr-code-finder.md
.claude/commands/: check_log.md  question.md
.github/: copliot-instruction.md
.github/instructions/: kiwi7-rule.md.instructions.md  kiwi8-rule.md.instructions.md
backend/: main.py
backend/api/common/: __init__.py  formatters.py  stock_functions.py  validators.py
backend/core/: config.py  exception_handler.py  exceptions.py  jwtmiddleware.py  kiwi8_db.py  logger.py  security.py
backend/domains/: stock_api.py  stock_task.py
backend/domains/base/: __init__.py  base_schema.py  base_token_manager.py
backend/domains/infrahub/: account_resolver.py  cache_keys.py  cache_manager.py  current_pricer.py  open_time_checker.py  prev_price_cache.py  stk_info_provider.py  stock_resolver.py  tick_data.py  ws_manager.py
backend/domains/kdaemon/: auto_trader.py  k_daemon.py
backend/domains/kdemon/: auto_trader.py  k_demon.py
backend/jobs/: ipo_scrap.py  ipostock_scrap.py  judal_data_collect.py  naver_options.py  system_init.py  write_account_history.py
backend/page_contexts/: account_context.py  context_registry.py  order_context.py  settings_context.py  stock_context.py
backend/utils/: acct_summary.py  common_utils.py  holdings_utils.py  kiwi_utils.py  naver_utils.py
code_samples/: .graphifyignore  api1.py  api2.py  api3.py  debug_open_time_checker.py  ex_func1.py  jisu_get1.py  judal_scrap_1.py  kw_api_def.py  naver1.py  naver_options.py  new_token.py  new_token_aiohttp.py  theme1.html  ws0.py  ws1.py  ws2.py
docs/: IpoData수집.md  LLM과의연결.md  LS데이터가져오기.md  alpine-js-study-sites.md  design_설계.md  html.template  kdaemon의활용.md  kis-api-using.md  ls-api-using.md  prompts.md  tech-note.md  templates.md  디자인.md  메뉴체계-설계.md  배포.md  설계.md  스케줄러작업들.md  인증-설계.md  자동매매.md  코딩지침.md  프롬프트.md
frontend/: .gitignore  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
html_samples/: GEMINI.md  alert_test.html  alternative1_top_nav.html  alternative2_split_view.html  alternative3_dropdown_table.html  kiwi_order.html  sample1.html  sample2.html  sample3.html
scripts/: migrate_tokens.py
sqls/: kiwi7_ddl.sql  kiwi8_ddl.sql
tests/: README.md  __init__.py  conftest.py
tests/api/: __init__.py  test_home_routes.py
tests/integration/: test_kis.py  test_kiwoom_token_manager.py  test_ls.py  test_services.py
tests/unit/: test_auto_trader_signals.py  test_config.py  test_tokens_service.py  test_utils.py
tools/: README.md  analyze_kis_api_issues.py  analyze_ls_duplicates.py  api_call.py  chk_current_pricer.py  chk_prev_price_cache.py  deduplicate_ls.py  definition_format.py  extract_kis_req_def.py  extract_kis_resp_def.py  extract_kw_req_def.py  extract_kw_resp_def.py  extract_ls_req_resp_def.py  fill_stk_info.py  ipostock_scrap.py  kind_stk_info.py  kisapi.sh  kwapi.sh  lsapi.sh  naver_option.py  naver_options.py  patch_ls_urls.py  run_account_history.py  test_acct_summary.py  test_api_definitions.py  test_kis_FHKST01010400.py  test_kis_balance.py  test_kiwoom_ka10086.py  test_ls_balance.py  test_ls_t8410.py  test_prev_price_cache.py
tools/db/: backup_db.sh  init_db.sh  query_db.py
tools/logs/: analyze_error.py  tail_log.sh
tools/setup/: check_env.py
tools/token/: check_token.py  issue_token.py
(+264 files in other folders)
